clean code: move metadata to yaml, no load exists stat

--- a/crawler/contest_metadata.yaml
+++ b/crawler/contest_metadata.yaml
@@ -1,24 +1,25 @@
+api: https://code.google.com/codejam/contest/scoreboard/do/
 2014:
-    "Q": 2974486
-    "1A": 2984486
-    "1B": 2994486
-    "1C": 3004486
-    "2": 3014486
-    "3": 3024486
-    "Final": 7214486
+    Q: 2974486
+    1A: 2984486
+    1B: 2994486
+    1C: 3004486
+    2: 3014486
+    3: 3024486
+    F: 7214486
 2013:
-    "Q": 2270488
-    "1A": 2418487
-    "1B": 2434486
-    "1C": 2437488
-    "2": 2442487
-    "3": 2433487
-    "Final": 2437491
+    Q: 2270488
+    1A: 2418487
+    1B: 2434486
+    1C: 2437488
+    2: 2442487
+    3: 2433487
+    F: 2437491
 2012:
-    "Q": 1460488
-    "1A": 1645485
-    "1B": 1836486
-    "1C": 1781488
-    "2": 1842485
-    "3": 1835486
-    "Final": 2075486
+    Q: 1460488
+    1A: 1645485
+    1B: 1836486
+    1C: 1781488
+    2: 1842485
+    3: 1835486
+    F: 2075486
