make simple answer model w/ data cleaning

--- a/crawler/Makefile
+++ b/crawler/Makefile
@@ -2,8 +2,9 @@ SHELL = bash
 
 main:
 	cat schema.sql > tmpfile.sql
-	./make_users.py $(year) > tmpfile.sql
-	./make_problems.py $(year) > tmpfile.sql
+	./make_users.py $(year) >> tmpfile.sql
+	./make_problems.py $(year) >> tmpfile.sql
+	./make_answers.py $(year) >> tmpfile.sql
 	mysql -u root -p < tmpfile.sql
 
 clean:
