feature: github extract compatibility.

--- a/data/github/metadata.yaml
+++ b/data/github/metadata.yaml
@@ -14,7 +14,7 @@ PHP:
   - name: kohana
     user: kohana
   - name: laravel
-    user: github.com/laravel
+    user: laravel
   - name: PHPMailer
     user: PHPMailer
   - name: phpMemAdmin
